added something idk

--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
         document.getElementById("controlsAngleText").textContent = Math.round(ship.a)
         document.getElementById("controlsXText").textContent = Math.round(ship.x)
         document.getElementById("controlsYText").textContent = Math.round(ship.y)
+        document.getElementById("healthText").textContent = ship.health
         mapUpdate()
     }
 
