--- a/index.html
+++ b/index.html
@@ -1,255 +1,12 @@
-<!-- Project -->
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DEADLY NOVA</title>
+    <title>Document</title>
 </head>
-<style>
-    /* Style */
-    body::-webkit-scrollbar {
-        width: 6px;
-    }
-
-    body {
-        padding: 0px;
-        margin: 0px;
-        text-align: center;
-        background-color: black;
-        user-select: none;
-        align-items: top center;
-        justify-content: center;
-    }
-
-    #intro {
-        background-color: dodgerblue;
-        color: ghostwhite;
-        margin: 5px;
-        padding: 2px;
-        width: 20em;
-        display: block;
-        animation: fadeEffect 0.8s;
-    }
-
-    #game {
-        color: #FFF;
-        display: none;
-        width: 90%;
-        text-align: center;
-        border: 1px solid #FFF;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .tab {
-        margin: 3px;
-        border: 1px solid #FFF;
-        width: 49%;
-    }
-
-    canvas #map {
-        width: 80%;
-        height: 80%;
-        border: 1px solid #0F0;
-        background-color: #222;
-    }
-
-    /* Animation */
-    @keyframes fadeEffect {
-        from {
-            opacity: 0
-        }
-
-        to {
-            opacity: 1
-        }
-    }
-</style>
-
 <body>
-    <!-- HTML -->
-    <div id="intro">
-        Deadly Nova
-        <div style="background-color: black; margin-top: 0px;">
-            <p>Story Info</p>
-            <div onClick='document.getElementById("game").style.display = "flex"; document.getElementById("intro").style.display = "none"'
-                style="text-align: right; font-size: 1.5em;">></div>
-        </div>
-    </div>
-    <div id="game">
-        <h2 style="padding-left: 30%; padding-right: 25px;">Deadly Nova</h2>
-        <h3 style="padding-left: 25px; padding-right: 30%;">1.0</h3>
-        <br>
-        <div class="tab" id="controls" style="height: 15em;">
-            <h3>CONTROLL</h3>
-            <b>ROTATION</b><br>
-            <button id="controlsMoveLeft" style="background-color: #999; color: #0F0; border: 1px solid #666;" onClick="onHeld(document.getElementById('controlsMoveLeft'), move('left'), 100, 1)">
-                &#x25C0</button> <span id="controlsAngleText">0</span>° <button id="controlsMoveRight" style="background-color: #999; color: #0F0; border: 1px solid #666;" onClick="onHeld(document.getElementById('controlsMoveRight'), move('right'), 100, 1)">
-                &#x25B6</button><br>
-            <b>POSITION</b><br> 
-            <button id="controlsMoveUp" style="background-color: #999; color: #0F0; border: 1px solid #666;" onClick="onHeld(document.getElementById('controlsMoveUp'), move('up'), 100, 1)">
-                &#x25B2</button> X:<span id="controlsXText">0</span><br>
-            <button id="controlsMoveDown" style="background-color: #999; color: #0F0; border: 1px solid #666;" onClick="onHeld(document.getElementById('controlsMoveDown'), move('down'), 100, 1)">
-                &#x25BC</button> Y:<span id="controlsYText">0</span><br>
-        </div>
-        <div class="tab" id="map" style="height: 15em;">
-            <h3>MAP</h3>
-            <canvas id="mapCanvas"></canvas>
-        </div>
-        <div class="tab" id="status" style="height: 15em;">
-            <h3>STATUS</h3>
-            Ship Stability: <span id="healthText"></span>%
-        </div>
-    </div>
-
-    <div id="database">
-    </div>
-
-    <script>
-// JavaScript
-    var ship = {
-        x: 50,
-        y: 50,
-        a: 0,
-        r: 5,
-        health: 100
-    }
-
-    function onHeld(btn, action, start, speedup) {
-            let t
-
-            let repeat = function () {
-                action()
-                t = setTimeout(repeat, start)
-                start = start / speedup
-            }
-
-            btn.mousedown = function () {
-                repeat()
-            }
-
-            btn.mouseup = function () {
-                clearTimeout(t)
-            }
-        }
-
-    function mapUpdate() {
-        let canvas = document.getElementById("mapCanvas")
-        let ctx = canvas.getContext("2d")
-
-        function boundryCheck() {
-            // Up
-            if (ship.y < ship.r) {
-                ship.y = ship.r
-            }
-            // Down
-            if (ship.y > canvas.height - ship.r) {
-                ship.y = canvas.height - ship.r
-            }
-            // Left
-            if (ship.x < ship.r) {
-                ship.x = ship.r
-            }
-            // Right
-            if (ship.x > canvas.width - ship.r) {
-                ship.x = canvas.width - ship.r
-            }
-        }
-
-        ctx.fillStyle = "lime"
-        ctx.fillRect(0, 0, canvas.width, canvas.height)
-        ctx.fillStyle = "black"
-        ctx.fillRect(3, 3, canvas.width - 6, canvas.height - 6)
-        ctx.fillStyle = "lime"
-        ctx.beginPath()
-        ctx.arc(ship.x / 1, ship.y / 1, ship.r, 0, Math.PI * 2)
-        ctx.fill()
-
-        ctx.fillStyle = "black"
-    }
-
-    function move(direction) {
-        onUpdate()
-        s = ship
-
-        if (direction == "up") {
-            let radians = (Math.PI / 180) * (s.a - 90)
-            s.x = s.x + 1 * Math.cos(radians)
-            s.y = s.y + 1 * Math.sin(radians)
-        }
-        else if (direction == "down") {
-            let radians = (Math.PI / 180) * (s.a - 90)
-            s.x = s.x - 1 * Math.cos(radians)
-            s.y = s.y - 1 * Math.sin(radians)
-        }
-        else if (direction == "right") {
-            s.a += 1
-        }
-        else if (direction == "left") {
-            s.a -= 1
-        }
-        else {
-            console.log("Invalid Movement Direction!")
-        }
-        onUpdate()
-    }
-
-    function onUpdate() {
-        // Math Updates
-        if (ship.a > 360) {         // max is 360°
-            ship.a -= 359
-        }
-        if (ship.a < 0) {           // min is 0°
-            ship.a += 359
-        }
-
-        // Ui Updates
-        document.getElementById("controlsAngleText").textContent = Math.round(ship.a)
-        document.getElementById("controlsXText").textContent = Math.round(ship.x)
-        document.getElementById("controlsYText").textContent = Math.round(ship.y)
-        document.getElementById("healthText").textContent = ship.health
-        mapUpdate()
-    }
-
-    // saving
-    function saveGame() {
-        let saveFile = ship
-        localStorage.setItem("saveFile", JSON.stringify(saveFile))
-    }
-
-    function loadGame() {
-        let saveFile = JSON.parse(localStorage.getItem("saveFile"))
-        ship = JSON.parse(localStorage.getItem("saveFile"))
-    }
-
-    setInterval(onUpdate, 50)
-    setInterval(saveGame, 5000)
-    loadGame()
-
-    </script>
+    
 </body>
-
 </html>
-
-<!--    Notes   -->
-<!--
-    * Write A Story
-    * Add Buttons And etc.
-
-    Story
-
-    Your world has been destroyed in an event called "The Great Sweep".
-    The Great Sweep deleted EVERYTHING except your spaceship which was currently traveling thru the [REDACTED].
-    You are locekd inside and have to conserve energy and oxygen so you can survive.
-    Your ship is broken so you cant see out. The only way to see outside is using the camera to see snapshots everynow and then.
-    The [REDACTED] has added a few new features to the ship.
-     --- 
-    How To Play
-
-    You have to go to locations on your map for resources to upgrade your ship to get more resources and uncover the secrets of this world.
--->
